--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Olivia &amp; Enrico Wedding Template</title>
+    <title>Angelina &amp; Anthony Wedding </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="favicons/8929-images-favicon.png">
     <link rel="stylesheet" href="css/css-animate.css">
@@ -18,15 +18,7 @@
         <script src="js/respond.min.js"></script>
     <![endif]-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144098545-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'UA-144098545-1');
-    </script>
+
 </head>
 <body>
     <!-- Preloader -->
@@ -43,8 +35,8 @@
             <div class="oliven-logo">
                 <a href="index.html">
                     <img src="images/images-logo.png" alt="">
-                    <span>Olivia <small>&amp;</small> Enrico</span>
-                    <h6>15.11.2021</h6>
+                    <span>Angelina <small>&amp;</small> Anthony</span>
+                    <h6>10.16.2021</h6>
                 </a>
             </div>
             <!-- Menu -->
@@ -53,29 +45,27 @@
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="index.html#couple">Couple</a></li>
                     <li><a href="index.html#story">Our Story</a></li>
-                    <li><a href="index.html#friends">Friends</a></li>
                     <li><a href="index.html#organization">Organization</a></li>
                     <li><a href="index.html#gallery">Gallery</a></li>
                     <li><a href="index.html#whenwhere">When &amp; Where</a></li>
                     <li><a href="index.html#rsvp">R.S.V.P</a></li>
                     <li><a href="index.html#gift">Gift Registry</a></li>
-                    <li><a href="blog.html">Blog</a></li>
                 </ul>
             </nav>
             <!-- Sidebar Footer -->
             <div class="footer1"> <span class="separator"></span>
-                <p>Olivia &amp; Enrico wedding<br>15 December 2021, New York</p>
+                <!-- <p>Angelina &amp; Anthony wedding<br>October 16 2021, New Orleans</p> -->
             </div>
         </aside>
         <!-- Content Section -->
         <div id="oliven-main">
             <!-- Header & Slider -->
-            <header id="home" class="header valign bg-img parallaxie" data-background="images/slider.jpg">
+            <header id="home" class="header valign bg-img parallaxie" data-background="images/bride-and-groom.jpeg">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center caption">
-                            <h1 class="animate-box" data-animate-effect="fadeInUp">Olivia &amp; Enrico</h1>
-                            <h5 class="animate-box" data-animate-effect="fadeInUp">15 December, 2021 &ndash; New York</h5> 
+                            <!-- <h1 class="animate-box" data-animate-effect="fadeInUp">Angelina &amp; Anthony</h1>
+                            <h5 class="animate-box" data-animate-effect="fadeInUp">15 December, 2021 &ndash; New York</h5>  -->
                         </div>
                     </div>
                     <div class="row">
@@ -93,36 +83,36 @@
                     <div class="row mb-60">
                         <div class="col-md-6">
                             <div class="item toright mb-30 animate-box" data-animate-effect="fadeInLeft">
-                                <div class="img"> <img src="images/images-bride.jpg" alt=""> </div>
+                                <div class="img"> <img src="images/anglina-face.jpeg" alt=""> </div>
                                 <div class="info valign">
                                     <div class="full-width">
-                                        <h6>Olivia Martin <i class="ti-heart"></i></h6> <span>The Bride</span>
-                                        <p>Olivia fringilla dui at elit finibus viverra nec a lacus seda themo the miss druane semper sollicitudin non the fermen.</p>
+                                        <h6>Angelina Ceja <i class="ti-heart"></i></h6> <span>The Bride</span>
+                                        <!-- <p>Angelina fringilla dui at elit finibus viverra nec a lacus seda themo the miss druane semper sollicitudin non the fermen.</p>
                                         <div class="social">
                                             <div class="full-width">
                                                 <a href="#0" class="icon"> <i class="ti-facebook"></i> </a>
                                                 <a href="#0" class="icon"> <i class="ti-twitter"></i> </a>
                                                 <a href="#0" class="icon"> <i class="ti-instagram"></i> </a>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="item mb-30 animate-box" data-animate-effect="fadeInRight">
-                                <div class="img"> <img src="images/images-groom.jpg" alt=""> </div>
+                                <div class="img"> <img src="images/groom-face.jpeg" alt=""> </div>
                                 <div class="info valign">
                                     <div class="full-width">
-                                        <h6>Enrico Danilo <i class="ti-heart"></i></h6> <span>The Groom</span>
-                                        <p>Enrico fringilla dui at elit finibus viverra nec a lacus seda themo the miss druane semper sollicitudin non the fermen.</p>
+                                        <h6>Anthony<i class="ti-heart"></i></h6> <span>The Groom</span>
+                                        <!-- <p>Enrico fringilla dui at elit finibus viverra nec a lacus seda themo the miss druane semper sollicitudin non the fermen.</p>
                                         <div class="social">
                                             <div class="full-width">
                                                 <a href="#0" class="icon"> <i class="ti-facebook"></i> </a>
                                                 <a href="#0" class="icon"> <i class="ti-twitter"></i> </a>
                                                 <a href="#0" class="icon"> <i class="ti-instagram"></i> </a>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +121,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
                             <h3 class="oliven-couple-title">Are getting married!</h3>
-                            <h4 class="oliven-couple-subtitle">December 15, 2021 &mdash; New York, Brooklyn</h4> 
+                            <h4 class="oliven-couple-subtitle">October 16, 2021 &mdash; New Orleans</h4> 
                         </div>
                     </div>
                 </div>
@@ -178,7 +168,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Friends -->
+            <!-- Friends
             <div id="friends" class="friends section-padding bg-pink">
                 <div class="container">
                     <div class="row">
@@ -248,7 +238,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- See you -->
             <div id="seeyou" class="seeyou section-padding bg-img bg-fixed" data-background="images/banner-3.jpg">
                 <div class="container">
@@ -480,9 +470,9 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h2>
-                                <a href="index.html"><img src="images/images-logo.png" alt=""><span>Olivia <small>&amp;</small> Enrico</span></a>
+                                <a href="index.html"><img src="images/images-logo.png" alt=""><span>Angelina <small>&amp;</small> Anthony</span></a>
                             </h2>
-                            <p class="copyright">December 15, 2021 &ndash; New York, Brooklyn</p>
+                            <p class="copyright">October 16, 2021 &ndash; New Orleans, Lousiana</p>
                         </div>
                     </div>
                 </div>
